# empty-project-cxx

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
cmake/: ASAN.cmake  DebugWithSanitizers.cmake  FastDebug.cmake  warning_flags.cmake
test/: demo.cpp
